# paddler

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  claude_restore.sh  flake.nix  jarmuz-fmt.mjs  jarmuz-release.mjs  package-lock.json  package.json  rust-toolchain.toml  shell.nix  tsconfig.json
paddler/: Cargo.toml
paddler/src/: agent_applicable_state.rs  agent_applicable_state_holder.rs  agent_desired_model.rs  agent_desired_state.rs  agent_issue_fix.rs  atomic_value.rs  balancer_applicable_state.rs  balancer_applicable_state_holder.rs  balancer_desired_state.rs  cancellation_token_stream_guard.rs  chat_template_renderer.rs  continuation_decision.rs  continuation_stop_parameters.rs  controls_session.rs  controls_websocket_endpoint.rs  converts_to_applicable_state.rs  converts_to_llama_kv_cache_dtype.rs  converts_to_llama_kv_cache_type.rs  converts_to_llama_pooling_type.rs  decoded_image.rs  decoded_image_error.rs  desired_model_resolution.rs  download_huggingface_model.rs  embedding.rs  embedding_input_tokenized.rs  generated_token_post_processor.rs  inference_parameters.rs  lib.rs  main.rs  oversized_embedding_document_details.rs  paddler_cache_dir.rs  resolve_desired_model.rs  resolved_socket_addr.rs  resolves_model_source.rs  run_until_shutdown.rs  sends_rpc_message.rs  service.rs  service_manager.rs  sets_desired_state.rs  slot_aggregated_status.rs  (+16 more)
paddler_agent/: Cargo.toml
paddler_agent/src/: agent_applicable_state.rs  agent_applicable_state_holder.rs  agent_desired_state_converter.rs  agent_issue_fix.rs  agent_kv_cache_dtype.rs  agent_pooling_type.rs  build_inference_context_params.rs  chat_template_load_status.rs  continue_from_conversation_history_request.rs  continue_from_raw_prompt_request.rs  continuous_batch_active_request.rs  continuous_batch_arbiter.rs  continuous_batch_arbiter_build_outcome.rs  continuous_batch_arbiter_handle.rs  continuous_batch_arbiter_spawn_outcome.rs  continuous_batch_embedding_processor.rs  continuous_batch_request_phase.rs  continuous_batch_request_state.rs  continuous_batch_scheduler_command.rs  continuous_batch_scheduler_context.rs  continuous_batch_terminal_delivery.rs  continuous_batch_terminal_outcome.rs  converts_to_llama_kv_cache_dtype.rs  converts_to_llama_pooling_type.rs  decoded_image.rs  desired_model_resolution.rs  drain_in_flight_requests.rs  embedding_input_tokenized.rs  from_request_params.rs  generate_embedding_batch_request.rs  grammar_sampler.rs  lib.rs  llamacpp_arbiter_service.rs  management_socket_client_service.rs  model_metadata_holder.rs  plan_embedding_batches.rs  prepare_conversation_history_request.rs  prepared_conversation_history_request.rs  receive_stream_stop_outcome.rs  receive_stream_stopper_collection.rs  (+20 more)
paddler_balancer/: Cargo.toml
paddler_balancer/src/: agent_controller.rs  agent_controller_pool.rs  agent_controller_slot_guard.rs  agent_response_forwarding_mode.rs  agent_stop_outcome.rs  awaitable_counter.rs  awaitable_counter_guard.rs  balancer_applicable_state.rs  balancer_applicable_state_holder.rs  balancer_desired_state_converter.rs  balancer_http_server.rs  buffered_request_agent_wait_result.rs  buffered_request_count_guard.rs  buffered_request_counter.rs  buffered_request_manager.rs  cancellation_token_stream_guard.rs  chat_template_override_sender_collection.rs  cluster_prompting_mode.rs  cluster_token_generation_mode.rs  controls_manages_senders_endpoint.rs  controls_session.rs  controls_websocket_endpoint.rs  create_cors_middleware.rs  dispatch_candidate.rs  dispatched_agent.rs  embedding_sender_collection.rs  ensure_file_descriptor_limit.rs  file_descriptor_limit_error.rs  generate_tokens_sender_collection.rs  guarded_stream.rs  handles_agent_streaming_response.rs  http_stream_from_agent.rs  lib.rs  manages_senders.rs  manages_senders_controller.rs  model_metadata_sender_collection.rs  reconciliation_service.rs  request_cancellation_registration.rs  request_cancellation_token_guard.rs  request_cancellation_tokens.rs  (+15 more)
paddler_bootstrap/: Cargo.toml
paddler_bootstrap/src/: agent.rs  agent_params.rs  agent_runner.rs  agent_service_bundle.rs  balancer.rs  balancer_params.rs  balancer_runner.rs  balancer_service_bundle.rs  bootstrap_agent_params.rs  bootstrap_balancer_params.rs  bootstrapped_agent_handle.rs  bootstrapped_balancer_handle.rs  cluster_runner.rs  lib.rs  run_service_manager.rs  service_thread.rs  shutdown_deadline.rs  unix_shutdown_signal.rs
paddler_bootstrap/tests/: balancer_releases_port_after_shutdown.rs  main.rs  runners.rs
paddler_cache_dir/: Cargo.toml
paddler_cache_dir/src/: cache_entry_healer.rs  cache_entry_health.rs  cache_entry_state.rs  cache_entry_validator.rs  cached_downloaded_model.rs  cached_downloaded_model_lock.rs  download_lock_acquisition_error.rs  lib.rs
paddler_cli/: Cargo.toml
paddler_cli/src/: lib.rs  main.rs
paddler_cli/tests/: balancer_reports_readable_error_when_file_descriptor_limit_is_too_low.rs
paddler_cli_tests/: Cargo.toml
paddler_cli_tests/src/: agents_stream_watcher.rs  cluster_handle.rs  lib.rs  (+33 more)
paddler_client/: Cargo.toml
paddler_client_cli/: Cargo.toml
paddler_client_python/: .gitignore  Makefile  README.md  pyproject.toml  shell.nix
paddler_client_tests/: Cargo.toml
paddler_cluster/: Cargo.toml
paddler_download_manager/: Cargo.toml
paddler_gui/: Cargo.toml  shell.nix
paddler_gui_tests/: Cargo.toml
paddler_harness/: Cargo.toml
paddler_integration_tests/: Cargo.toml
paddler_messaging/: Cargo.toml
paddler_model_card/: Cargo.toml
paddler_model_tests/: Cargo.toml
paddler_openai_client_python_test/: README.md  pyproject.toml
paddler_openai_conformance/: Cargo.toml
paddler_openai_response_format_validator/: Cargo.toml
paddler_opencode_tests/: Cargo.toml
paddler_ports/: Cargo.toml
paddler_preprocessing/: Cargo.toml
paddler_second_brain_gui/: Cargo.toml  esbuild.mjs  index.html  package-lock.json  package.json  shell.nix  tsconfig.json
paddler_state_conversion/: Cargo.toml
paddler_test_cluster_harness/: Cargo.toml
(+1822 files in other folders)
