[workspace]
members = ["paddler", "paddler_client", "paddler_types"]
resolver = "2"

[workspace.package]
authors = ["Intentee"]
description = "Open-source LLMOps platform for hosting and scaling AI in your own infrastructure"
edition = "2024"
homepage = "https://paddler.intentee.com/"
license = "Apache-2.0"
repository = "https://github.com/intentee/paddler"
version = "2.1.1"

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-rt = "2.11"
actix-web = "4"
actix-web-lab = "0.24"
actix-ws = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
askama = "0.14"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.11"
cadence = "1.6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
encoding_rs = { version = "0.8", features = ["serde"] }
env_logger = "0.11"
esbuild-metafile = "0.5.2"
futures = "0.3"
futures-util = { version = "0.3", features = ["tokio-io"] }
hf-hub = { version = "0.4", features = ["tokio"] }
indoc = "2"
jsonschema = { version = "0.37", default-features = false }
llama-cpp-2 = "0.1.126"
llama-cpp-sys-2 = "0.1.126"
log = "0.4"
mime_guess = "2"
minijinja = { version = "2.12", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.12", features = ["datetime", "pycompat", "wordcount", "wordwrap"] }
nanoid = "0.4"
nix = { version = "0.30", features = ["signal"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-embed = { version = "8.9", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
tempfile = "3.20.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.28"
thiserror = "2"
url = { version = "2.5", features = ["serde"] }
paddler_client = { path = "paddler_client" }
paddler_types = { path = "paddler_types", default-features = false }

[profile.release]
lto = true
codegen-units = 1
