[workspace]
members = ["paddler_integration_tests", "paddler", "paddler_bootstrap", "paddler_cli", "paddler_client", "paddler_model_tests", "paddler_second_brain_gui", "paddler_types"]
resolver = "2"

[workspace.package]
authors = ["Intentee"]
description = "Open-source LLMOps platform for hosting and scaling AI in your own infrastructure"
edition = "2024"
homepage = "https://paddler.intentee.com/"
license = "Apache-2.0"
repository = "https://github.com/intentee/paddler"
version = "3.0.1"

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-rt = "2.11"
actix-web = "4"
actix-web-lab = "0.26"
actix-ws = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
askama = "0.14"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.11"
cadence = "1.6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
encoding_rs = { version = "0.8", features = ["serde"] }
env_logger = "0.11"
esbuild-metafile = "0.5.2"
futures = "0.3"
futures-util = { version = "0.3", features = ["tokio-io"] }
hf-hub = { version = "0.4", features = ["tokio"] }
image = "0.25"
indoc = "2"
jsonschema = { version = "0.37", default-features = false }
llama-cpp-bindings = { version = "0.4.0", features = ["mtmd"] }
llama-cpp-bindings-sys = { version = "0.4.0" }
base64 = "0.22"
log = "0.4"
mime_guess = "2"
minijinja = { version = "2.12", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.12", features = ["datetime", "pycompat", "wordcount", "wordwrap"] }
nanoid = "0.4"
nix = { version = "0.30", features = ["signal"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
resvg = "0.46"
rust-embed = { version = "8.9", features = ["interpolate-folder-path"] }
serial_test = { version = "3", features = ["file_locks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
if-addrs = "0.13"
statum = "0.6"
tempfile = "3.20.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.28"
thiserror = "2"
url = { version = "2.5", features = ["serde"] }
paddler = { version = "3.0.1", path = "paddler" }
paddler_bootstrap = { version = "3.0.1", path = "paddler_bootstrap" }
paddler_client = { version = "3.0.1", path = "paddler_client" }
paddler_types = { version = "3.0.1", path = "paddler_types" }

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Lint groups (priority = -1 so individual overrides take precedence)
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Specific linter settings
allow_attributes = "deny"
dbg_macro = "deny"
error_impl_error = "deny"
expect_used = "deny"
infinite_loop = "deny"
literal_string_with_formatting_args = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
tests_outside_test_module = "deny"
todo = "deny"
too_many_lines = "allow"
unimplemented = "deny"
unwrap_used = "deny"
