[package]
name = "paddler_bootstrap"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared service wiring for Paddler CLI and desktop app"
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
paddler = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trzcina = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true }

[lints]
workspace = true

[features]
default = []
web_admin_panel = ["paddler/web_admin_panel"]
