[package]
name = "paddler_bootstrap"
autotests = false
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared service wiring for Paddler CLI and desktop app"
license.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
paddler_agent = { workspace = true }
paddler_balancer = { workspace = true }
paddler_messaging = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trzcina = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[features]
default = []
cuda = ["paddler_agent/cuda"]
metal = ["paddler_agent/metal"]
vulkan = ["paddler_agent/vulkan"]
web_admin_panel = ["paddler_balancer/web_admin_panel"]
