[package]
name = "paddler_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI binary for Paddler"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "paddler"
path = "src/main.rs"

[dependencies]
actix-rt = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
command_handler = { workspace = true }
env_logger = { workspace = true }
paddler_balancer = { workspace = true }
paddler_bootstrap = { workspace = true }
tokio-util = { workspace = true }
trzcina = { workspace = true }

# web dashboard deps
esbuild-metafile = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
cuda = ["paddler_bootstrap/cuda"]
metal = ["paddler_bootstrap/metal"]
vulkan = ["paddler_bootstrap/vulkan"]
web_admin_panel = [
    "dep:esbuild-metafile",
    "paddler_balancer/web_admin_panel",
    "paddler_bootstrap/web_admin_panel",
]
