[package]
name = "paddler_cli_tests"
autotests = false
authors.workspace = true
description = "Subprocess-isolated multi-agent integration tests for Paddler"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
version.workspace = true

[[bin]]
name = "paddler_cluster_node"
path = "src/bin/paddler_cluster_node.rs"

[[test]]
name = "integration"
path = "tests/main.rs"

[features]
default = []
cuda = ["paddler_cli/cuda"]
metal = ["paddler_cli/metal"]
tests_that_use_llms = []
web_admin_panel = ["paddler_cli/web_admin_panel"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
paddler_cli = { workspace = true }
paddler_messaging = { workspace = true }
paddler_test_cluster_harness = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
