[package]
name = "paddler_client"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
paddler_types = { workspace = true, default-features = false, features = [] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
