[package]
name = "paddler_client_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Client CLI/TUI binary for Paddler"
license.workspace = true

[[bin]]
name = "paddler_client_cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
llama-cpp-bindings-types = { workspace = true }
log = { workspace = true }
paddler = { workspace = true }
paddler_bootstrap = { workspace = true }
paddler_client = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
