[package]
name = "paddler_client_tests"
authors.workspace = true
description = "Integration tests exercising paddler_client error and edge paths against local fixtures"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
paddler_client = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
paddler_messaging = { workspace = true }
paddler_test_fixture = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
