[package]
name = "paddler_download_manager"
autotests = false
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
