[package]
name = "paddler_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Paddler desktop application"
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
esbuild-metafile = { workspace = true, optional = true }
iced = { workspace = true }
if-addrs = { workspace = true }
log = { workspace = true }
open = { workspace = true }
paddler = { workspace = true }
paddler_bootstrap = { workspace = true }
paddler_types = { workspace = true }
statum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "paddler_gui"
path = "src/main.rs"

[dev-dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[features]
default = []
cuda = ["paddler/cuda"]
metal = ["paddler/metal"]
web_admin_panel = [
    "dep:esbuild-metafile",
    "paddler/web_admin_panel",
    "paddler_bootstrap/web_admin_panel",
]
