[package]
name = "paddler_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Paddler desktop application"
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
command_handler = { workspace = true }
env_logger = { workspace = true }
esbuild-metafile = { workspace = true, optional = true }
iced = { workspace = true }
if-addrs = { workspace = true }
log = { workspace = true }
open = { workspace = true }
paddler_balancer = { workspace = true }
paddler_bootstrap = { workspace = true }
paddler_messaging = { workspace = true }
parking_lot = { workspace = true }
statum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trzcina = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }

[lints]
workspace = true

[features]
default = []
cuda = ["paddler_bootstrap/cuda"]
metal = ["paddler_bootstrap/metal"]
web_admin_panel = [
    "dep:esbuild-metafile",
    "paddler_balancer/web_admin_panel",
    "paddler_bootstrap/web_admin_panel",
]
