[package]
name = "paddler_gui_tests"
authors.workspace = true
description = "Integration tests for the paddler_gui binary"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
tests_that_use_compiled_paddler = []

[dependencies]
anyhow = { workspace = true }
nix = { workspace = true }
paddler_tests = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
