[package]
name = "paddler_integration_tests"
authors.workspace = true
description = "Integration tests for Paddler"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
cuda = []
tests_that_use_compiled_paddler = []
tests_that_use_llms = []
web_admin_panel = ["paddler/web_admin_panel", "paddler_bootstrap/web_admin_panel"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
paddler = { workspace = true }
paddler_bootstrap = { workspace = true }
paddler_client = { workspace = true }
paddler_types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
