[package]
name = "paddler_messaging"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
encoding_rs = { workspace = true }
llama-cpp-bindings-types = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
