[package]
name = "paddler_model_tests"
authors.workspace = true
description = "Per-model integration tests for Paddler"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
paddler = { workspace = true }
paddler_types = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true }
llama-cpp-bindings = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
tests_that_use_llms = []

[lints]
workspace = true
